<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ChatFunction">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:background="@color/pink"
        android:layout_above="@+id/senderContainer"/>
    <RelativeLayout
        android:id="@+id/senderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:layout_alignParentBottom="true"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/chat_user_message"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:hint="Type your message"
            android:textColorHint="@color/accent"
            android:gravity="top"
            android:layout_toStartOf="@+id/sendUserMessage"
            android:layout_toLeftOf="@+id/sendUserMessage"
            android:autoText="false" />
        <Button
            android:id="@+id/sendUserMessage"
            android:layout_marginRight="10dp"
            android:textColor="@color/accent"
            android:layout_width="72dp"
            android:layout_height="40dp"
            android:text="Send"
            android:background="@color/pink"
            android:onClick="sendMessageToFireChat"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_for_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
