...
            android:src="@drawable/home"
            android:layout_weight="0.20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/chatBtn"
            android:src="@drawable/chat"
            android:layout_weight="0.20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
...
